test fix scrollbar and add list template

--- a/src/components/table.css
+++ b/src/components/table.css
@@ -156,7 +156,8 @@
 }
 
 .SelectedRow {
-  background-color: var(--primary-yellow-color);
+  background-color: #f0f0f3;
+  /* background-color: var(--primary-yellow-color); */
 }
 
 .AlignRight {
